2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        (g_daemon_file_file_iface_init):
	Actually export get_uri_scheme
	
        * client/gdaemonfileinputstream.c:
        (g_daemon_file_input_stream_query_info):
	Set NOT_SUPPORTED error

2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * common/gmountoperationdbus.c:
        * common/gmounttracker.c:
        * daemon/gvfsbackend.h:
        * daemon/gvfschannel.h:
	Remove use of old giotypes.h header

2007-11-03  Paolo Borelli  <pborelli@katamail.com>

	* client/gdaemonvfs.c (get_mountspec_from_uri):
	Do not leak the decoded uri.

2007-11-02  Sebastien Bacher  <seb128@ubuntu.com>

	* common/Makefile.am: use the correct gmountoperationdbus.h naming

2007-11-01  Christian Kellner  <gicmo@gnome.org>

	* client/*.[ch]:
	* common/*.[ch]:
	* daemon/*.[ch]:
	* test/*.[ch]:
	Add copyright information to source files.

2007-11-01  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonvfs.[ch]:
	Implement get_uri_scheme
	
        * daemon/mount.c:
	Add needed includes

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Implement contains_file and get_relative_path

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.[ch]:	
        Add g_vfs_backend_get_mount_spec
	
        * daemon/gvfsjobqueryfsinfo.c:
	Fix indentation
	
        * daemon/gvfsjobqueryinfo.c:
	Implement id:fs attribute

2007-10-31  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvolume.c:
	Remove get_platform_id
	
2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Implement find_enclosing_volume
	
        * client/gdaemonvolume.[ch]:
        * client/gdaemonvolumemonitor.c:
	No need to pass volume monitor when
	createing volumes

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.[ch]:
	Add all mount info to GMountInfo
	Make it refcounted
	