@@ -1,0 +1,134 @@
+client/gdaemonfileinputstream.c
+client/gdaemonfileoutputstream.c
+client/gdaemonvfs.c
+client/gvfsdaemondbus.c
+common/gmounttracker.c
+common/gsysutils.c
+common/gvfsdaemonprotocol.c
+daemon/daemon-main.c
+daemon/gvfsbackend.c
+daemon/gvfsbackendftp.c
+daemon/gvfsbackendsftp.c
+daemon/gvfsbackendsmb.c
+daemon/gvfsbackendsmbbrowse.c
+daemon/gvfsbackendtest.c
+daemon/gvfsbackendtrash.c
+daemon/gvfschannel.c
+daemon/gvfsdaemon.c
+daemon/gvfsdaemonutils.c
+daemon/gvfsjobcloseread.c
+daemon/gvfsjobclosewrite.c
+daemon/gvfsjobcopy.c
+daemon/gvfsjobcreatemonitor.c
+daemon/gvfsjobdbus.c
+daemon/gvfsjobdelete.c
+daemon/gvfsjobenumerate.c
+daemon/gvfsjobmakedirectory.c
+daemon/gvfsjobmakesymlink.c
+daemon/gvfsjobmount.c
+daemon/gvfsjobmountmountable.c
+daemon/gvfsjobmove.c
+daemon/gvfsjobopenforread.c
+daemon/gvfsjobopenforwrite.c
+daemon/gvfsjobqueryattributes.c
+daemon/gvfsjobqueryfsinfo.c
+daemon/gvfsjobqueryinfo.c
+daemon/gvfsjobread.c
+daemon/gvfsjobseekread.c
+daemon/gvfsjobseekwrite.c
+daemon/gvfsjobsetattribute.c
+daemon/gvfsjobsetdisplayname.c
+daemon/gvfsjobtrash.c
+daemon/gvfsjobwrite.c
+daemon/main.c
+daemon/mount.c
+gvfs-0.0.1/client/gdaemonfile.c
+gvfs-0.0.1/client/gdaemonfileinputstream.c
+gvfs-0.0.1/client/gdaemonfileoutputstream.c
+gvfs-0.0.1/client/gdaemonvfs.c
+gvfs-0.0.1/client/gvfsdaemondbus.c
+gvfs-0.0.1/common/gmounttracker.c
+gvfs-0.0.1/common/gsysutils.c
+gvfs-0.0.1/common/gvfsdaemonprotocol.c
+gvfs-0.0.1/daemon/daemon-main.c
+gvfs-0.0.1/daemon/gvfsbackend.c
+gvfs-0.0.1/daemon/gvfsbackendftp.c
+gvfs-0.0.1/daemon/gvfsbackendsftp.c
+gvfs-0.0.1/daemon/gvfsbackendsmb.c
+gvfs-0.0.1/daemon/gvfsbackendsmbbrowse.c
+gvfs-0.0.1/daemon/gvfsbackendtest.c
+gvfs-0.0.1/daemon/gvfsbackendtrash.c
+gvfs-0.0.1/daemon/gvfschannel.c
+gvfs-0.0.1/daemon/gvfsdaemon.c
+gvfs-0.0.1/daemon/gvfsdaemonutils.c
+gvfs-0.0.1/daemon/gvfsjobcloseread.c
+gvfs-0.0.1/daemon/gvfsjobclosewrite.c
+gvfs-0.0.1/daemon/gvfsjobcopy.c
+gvfs-0.0.1/daemon/gvfsjobcreatemonitor.c
+gvfs-0.0.1/daemon/gvfsjobdbus.c
+gvfs-0.0.1/daemon/gvfsjobdelete.c
+gvfs-0.0.1/daemon/gvfsjobenumerate.c
+gvfs-0.0.1/daemon/gvfsjobmakedirectory.c
+gvfs-0.0.1/daemon/gvfsjobmakesymlink.c
+gvfs-0.0.1/daemon/gvfsjobmount.c
+gvfs-0.0.1/daemon/gvfsjobmountmountable.c
+gvfs-0.0.1/daemon/gvfsjobmove.c
+gvfs-0.0.1/daemon/gvfsjobopenforread.c
+gvfs-0.0.1/daemon/gvfsjobopenforwrite.c
+gvfs-0.0.1/daemon/gvfsjobqueryattributes.c
+gvfs-0.0.1/daemon/gvfsjobqueryfsinfo.c
+gvfs-0.0.1/daemon/gvfsjobqueryinfo.c
+gvfs-0.0.1/daemon/gvfsjobread.c
+gvfs-0.0.1/daemon/gvfsjobseekread.c
+gvfs-0.0.1/daemon/gvfsjobseekwrite.c
+gvfs-0.0.1/daemon/gvfsjobsetattribute.c
+gvfs-0.0.1/daemon/gvfsjobsetdisplayname.c
+gvfs-0.0.1/daemon/gvfsjobtrash.c
+gvfs-0.0.1/daemon/gvfsjobwrite.c
+gvfs-0.0.1/daemon/main.c
+gvfs-0.0.1/daemon/mount.c
+client/gdaemonfile.c
+client/gdaemonfileinputstream.c
+client/gdaemonfileoutputstream.c
+client/gdaemonvfs.c
+client/gvfsdaemondbus.c
+common/gmounttracker.c
+common/gsysutils.c
+common/gvfsdaemonprotocol.c
+daemon/daemon-main.c
+daemon/gvfsbackend.c
+daemon/gvfsbackendftp.c
+daemon/gvfsbackendsftp.c
+daemon/gvfsbackendsmb.c
+daemon/gvfsbackendsmbbrowse.c
+daemon/gvfsbackendtest.c
+daemon/gvfsbackendtrash.c
+daemon/gvfschannel.c
+daemon/gvfsdaemon.c
+daemon/gvfsdaemonutils.c
+daemon/gvfsjobcloseread.c
+daemon/gvfsjobclosewrite.c
+daemon/gvfsjobcopy.c
+daemon/gvfsjobcreatemonitor.c
+daemon/gvfsjobdbus.c
+daemon/gvfsjobdelete.c
+daemon/gvfsjobenumerate.c
+daemon/gvfsjobmakedirectory.c
+daemon/gvfsjobmakesymlink.c
+daemon/gvfsjobmount.c
+daemon/gvfsjobmountmountable.c
+daemon/gvfsjobmove.c
+daemon/gvfsjobopenforread.c
+daemon/gvfsjobopenforwrite.c
+daemon/gvfsjobqueryattributes.c
+daemon/gvfsjobqueryfsinfo.c
+daemon/gvfsjobqueryinfo.c
+daemon/gvfsjobread.c
+daemon/gvfsjobseekread.c
+daemon/gvfsjobseekwrite.c
+daemon/gvfsjobsetattribute.c
+daemon/gvfsjobsetdisplayname.c
+daemon/gvfsjobtrash.c
+daemon/gvfsjobwrite.c
+daemon/main.c
+daemon/mount.c
